# actix-quickstart

./: .gitignore  Cargo.toml  Makefile  README.md
.circleci/: config.yml
.circleci/scripts/: build-tag.sh
app/: package.json
app/src/: App.tsx
app/src/components/: Login.tsx  Signup.tsx
app/src/store/: reducer.ts
config/: dev.yaml
gateway/: Cargo.toml  Makefile
gateway/config/: dev.yaml
gateway/migrations/: 20210214064321_users.sql
gateway/src/: error.rs
gateway/src/backend/: mod.rs
gateway/src/common/: logging.rs
gateway/src/gateway/: http.rs  mod.rs
gateway/src/gateway/extractors/: auth.rs  mod.rs
gateway/src/gateway/handlers/: api.rs  auth.rs  mod.rs
gateway/src/gateway/middleware/: auth.rs
migrations/: 20210214064321_users.sql
src/: error.rs  main.rs
src/backend/: mod.rs
src/common/: auth.rs  db.rs  mod.rs
src/gateway/: handlers.rs  http.rs  mod.rs
src/gateway/extractors/: user_id.rs
src/gateway/handlers/: api.rs  auth.rs  pages.rs
src/store/: auth.rs  mod.rs  person.rs  user.rs
