[package]
name = "actix-quickstart"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
trace = ["slog/max_level_trace", "slog/release_max_level_warn"]

[dependencies]
actix-web = "3"
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
config = { version = "0.10.1", features = ["yaml"] }
deadpool-postgres = "0.7.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.5.2"
slog-term = "2"
slog-json = "2.3.0"
slog-async = "2"
slog-stream = "1.2.1"
slog-scope = "4.3"
slog-stdlog = "4"
tokio = "1.2.0"
tokio-postgres = "0.7.0"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
