[package]
name = "actix-quickstart"
version = "0.1.0"
authors = ["Armani Ferrante <armaniferrante@gmail.com>"]
edition = "2018"

[features]
trace = ["slog/max_level_trace", "slog/release_max_level_warn"]

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
config = { version = "0.10.1", features = ["yaml"] }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
slog = "2.5.2"
slog-term = "2"
slog-json = "2.3.0"
slog-async = "2"
slog-stream = "1.2.1"
slog-scope = "4.3"
slog-stdlog = "4"
sqlx = { version = "0.4.1", features = ["postgres", "runtime-actix-native-tls", "chrono"] }

# Needed due to breaking change. See https://github.com/myrrlyn/funty/issues/3.
funty = "=1.1.0"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.12", features = ["derive"] }